--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
   <head></head>
   <body>
-    <h1>uni2graph</h1>
+    <h1>Uni2Graph: Analyse der Ausgestaltung von Lehre und Studium mithilfe von Knowledge Graphs – Eine vergleichende Untersuchung von Lerninhalten, Kursen,
+Modulen und Studiengängen privater und staatlicher Fernhochschulen.</h1>
+    Hier entsteht die Webseite des Projektes Uni2Graph
+    <h4>Kontakt</h4>
+    <ul>
+      <li><a href="https://www.euro-fh.de/euro-fh/professoren/lenz-kesekamp/">Prof. Dr. Vera Lenz-Kesekamp</a>, EuroFH</li>
+      <li><a href="https://www.fernuni-hagen.de/ks/team/niels.seidel.shtml">Dr. Niels Seidel</a>, FernUniversität in Hagen</li>
+    </ul>
   </body>
 </html>
