--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head></head>
-  <body>
+  <bod style="width:600px; margin: 10 auto;"y>
     <h1>Uni2Graph: Analyse der Ausgestaltung von Lehre und Studium mithilfe von Knowledge Graphs – Eine vergleichende Untersuchung von Lerninhalten, Kursen,
 Modulen und Studiengängen privater und staatlicher Fernhochschulen.</h1>
     Auf dieser Seite entsteht die Webseite des Projekts Uni2Graph.
-    <h4>Kontakt>
+    <h4>Kontakt</h4>
       <ul>
         <li><a href="https://www.euro-fh.de/euro-fh/professoren/lenz-kesekamp/">Prof. Dr. Vera Lenz-Kesekamp</a>, Euro FH</li>
         <li><a href="https://www.fernuni-hagen.de/ks/team/niels.seidel.shtml">Dr. Niels Seidel</a>, FernUniversität in Hagen</li>
