--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
-  <bod style="width:600px; margin: 10 auto;"y>
+  <body style="width:600px; margin: 10 auto;">
     <h1>Uni2Graph: Analyse der Ausgestaltung von Lehre und Studium mithilfe von Knowledge Graphs – Eine vergleichende Untersuchung von Lerninhalten, Kursen,
 Modulen und Studiengängen privater und staatlicher Fernhochschulen.</h1>
     Auf dieser Seite entsteht die Webseite des Projekts Uni2Graph.
